Flags, movement of main